[package]
name = "oscillatorsetups"
version = "0.0.1"
edition = "2021"

authors = ["Denis L <info@moderncodes.com>"]
repository = "https://github.com/moderncodes/oscillatorsetups"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"