[package]
name = "oscillatorsetups"
version = "0.1.0"
edition = "2021"
description = "Cryptocurrency Technical Analysis Library"
license = "Apache-2.0"
documentation = "https://github.com/moderncodes/oscillatorsetups/blob/main/README.md"

authors = ["Denis L <info@moderncodes.com>"]
repository = "https://github.com/moderncodes/oscillatorsetups"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.11", features = ["json","blocking"]}
tokio = { version = "1.29", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
sysinfo = "0.29"

#rust_decimal = "1.30"
rust_decimal = { git = "https://github.com/paupino/rust-decimal.git" }
rust_decimal_macros = "1.30"

rayon = "1.7"